--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth2": "^0.1.6",
     "q": "^1.4.1",
     "request": "^2.58.0",
+    "sanitize-html": "^1.7.0",
     "socket.io": "^1.3.5"
   },
   "repository": {
