--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "Debate Synergy is a web app for high school and college debate teams to store online research, discuss debate in the forums, and livestream debate rounds.",
   "version": "2.1.0",
   "scripts": {
-    "start": "nohup forever --minUptime=10 --spinSleepTime=2000 -v -w . > public/server.log &",
+    "start": "nohup forever --minUptime=10 --spinSleepTime=2000 -v -w . > public/server.txt &",
     "start-out": "forever --minUptime=10 --spinSleepTime=2000 -v -w .",
-    "mongo": "nohup service mongodb stop &&  rm -f db/mongod.lock &&  mongod --dbpath=db --smallfiles --nojournal &",
+    "mongo": "nohup service mongodb stop &&  rm -f db/mongod.lock &&  mongod --dbpath=db --smallfiles --nojournal --bind_ip=127.0.0.1 --verbose > public/server.txt&",
     "admin": "nohup node node_modules/mongo-express/app.js &",
     "setup": " npm install forever -g && mkdir db && mv node_modules/mongo-express/config.default.js node_modules/mongo-express/config.js"
   },
