--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "debatesynergy.com",
-  "description": "Debate Synergy is a web app for high school and college debate teams to store online research, discuss debate in the forums, and livestream debate rounds.",
+  "description": "DebateSynergy.com web app allows high school and college debate teams to store online research and stream debate rounds.",
   "version": "2.1.0",
   "scripts": {
     "start": "nohup forever --minUptime=10 --spinSleepTime=2000 -v -w . > public/server.txt &",
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gulakov/debatesynergy.com-beta.com"
+    "url": "https://github.com/gulakov/debatesynergy.com"
   },
   "private": true,
   "license": "MIT"
