oauth, https routes

--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "scripts": {
     "start": "forever --minUptime=10 --spinSleepTime=2000 -e public/server.txt -o public/server.txt -a -v -w .",
     "start-nohup": "nohup forever --minUptime=10 --spinSleepTime=2000 -v -w . > public/server.txt &",
-    "mongo": "killall mongod &>/dev/null && mkdir -p db && rm -f db/mongod.lock && nohup mongod --dbpath=db --smallfiles --nojournal --bind_ip=127.0.0.1  > ~/debatesynergy.com/mongo.log  2>&1 &",
+    "mongo": "killall mongod &>/dev/null && mkdir -p db && rm -f db/mongod.lock && nohup mongod --dbpath=db --smallfiles --nojournal --bind_ip=127.0.0.1  > mongo.log  2>&1 &",
     "admin": "nohup node node_modules/mongo-express/app.js &>/dev/null",
     "setup": " npm install forever -g && mv node_modules/mongo-express/config.default.js node_modules/mongo-express/config.js"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
+    "body-parser": "^1.12.4",
+    "compression": "^1.6.1",
+    "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
-    "express": "~4.12.4",
+    "express": "^4.12.4",
     "express-session": "^1.11.3",
-    "googleapis": "^4.0.0",
+    "express-subdomain": "^1.0.5",
+    "mongo-express": "^0.30.48",
     "mongoose": "^4.2.9",
-    "passport": "^0.2.2",
-    "passport-google-oauth2": "^0.1.6",
     "q": "^1.4.1",
     "request": "^2.58.0",
     "sanitize-html": "^1.7.0",
