--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "description": "DebateSynergy.com web app enables high school and college debate teams to store online research and stream debate rounds.",
   "version": "2.1.0",
   "scripts": {
-    "start": "forever --minUptime=10 --spinSleepTime=2000 -e public/server.txt -o public/server.txt -a -v -w .",
-    "start-nohup": "nohup forever --minUptime=10 --spinSleepTime=2000 -v -w . > public/server.txt &",
-    "mongo": "killall mongod &>/dev/null && mkdir -p db && rm -f db/mongod.lock && nohup mongod --dbpath=db --smallfiles --nojournal --bind_ip=127.0.0.1  > mongo.log  2>&1 &",
+    "start": "forever --minUptime=10 --spinSleepTime=2000 -e server.log -o server.log -a -v -w .",
+    "start-nohup": "nohup forever --minUptime=10 --spinSleepTime=2000 -v -w . >> server.log &",
+    "mongo": "killall mongod &>/dev/null && mkdir -p db && rm -f db/mongod.lock && nohup mongod --dbpath=db --smallfiles --nojournal --bind_ip=127.0.0.1  >> mongo.log  2>&1 &",
     "admin": "nohup node node_modules/mongo-express/app.js &>/dev/null",
     "setup": " npm install forever -g && mv node_modules/mongo-express/config.default.js node_modules/mongo-express/config.js"
   },
   "dependencies": {
     "body-parser": "^1.12.4",
     "compression": "^1.6.1",
-    "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
-    "express": "^4.12.4",
+    "express": "^5.0.0-alpha.2",
     "express-session": "^1.11.3",
     "express-subdomain": "^1.0.5",
-    "mongo-express": "^0.30.48",
+    "mongo-express": "^0.30.49",
     "mongoose": "^4.2.9",
     "q": "^1.4.1",
     "request": "^2.58.0",
