--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-nohup.out
 db/
 node_modules/
-public/files/*
-public/server.txt
-config.json
-config.mongo.js
-*.log
-
+public/oldword/*
+public/lib/*
+nohup.out
+config*
+*log
